--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,13 +12,18 @@
     "@ai-dataset-generator/shared": "1.0.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^4.1.3",
     "@tanstack/react-query": "^5.20.5",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.6.7",
+    "concurrently": "^9.1.2",
+    "framer-motion": "^12.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.22.1",
-    "zod": "^3.22.4"
+    "recharts": "^2.15.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
@@ -36,4 +41,4 @@
     "typescript": "^5.3.3",
     "vite": "^5.1.3"
   }
-} 
+}
